# plex-discord-bridge

./: .env.default  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/plex_discord_bridge/: __main__.py  config.py  handler.py  models.py
tests/: test_webhook.py
